# uniffi-armv7-aot-checksum-bug

./: .gitignore  README.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/repro/: MainActivity.kt
android/app/src/main/java/uniffi/uniffi_repro/: uniffi_repro.kt
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
